[package]
name = "ideabank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
markdown-meta-parser="0.1.3"
colored = "2"
chrono = "0.4"
convert_case={ version = "0.6.0", features = ["random"] }
comfy-table="6.1.0"
