[package]
name = "ideabank"
version = "1.0.0"
edition = "2021"
authors=["Rithul Kamesh<hi@rithul.dev>"]
description="A Simple Idea bank made with rust"
license="MIT"
license-file="LICENSE"
repository="https://github.com/rithulkamesh/ideabank"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
markdown-meta-parser="0.1.3"
chrono = "0.4"
convert_case={ version = "0.6.0", features = ["random"] }
comfy-table="6.1.0"
home = "0.5.3"
